# oracle-db-examples

python/python-oracledb/: pyproject.toml
