[tool.poetry]
name = "oracle-db-samples"
version = "0.1.0"
description = "Oracle database python samples."
authors = ["louspringer <lou@louspringer.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
